# RaytracingRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: c++-standards.cmake
include/render/: aabb.h  array2d.h  camera.h  common.h  filesystem.h  fwd.h  image.h  json.h  progress.h  ray.h  scene.h  texture.h  transform.h  vec.h
include/render/integrators/: direct.h  integrator.h  normal.h  path.h  path_mis.h  tangent.h  uv.h
include/render/materials/: airDensityShift.h  blend.h  dielectric.h  diffuse.h  diffuse_emitter.h  diffuse_transparent.h  fresnel_blend.h  material.h  metal.h  mirage.h  phong.h  vMF_diffuse.h
include/render/samplers/: independent.h  sampler.h
include/render/shapes/: bvh.h  envmap.h  instance.h  mesh.h  quad.h  shape.h  shape_group.h  sphere.h  triangle.h
scenes/: airDensityShift.json  direct-emitter.json  direct-eval.json  direct-mis.json  direct-naive.json  direct.json  envmap-emitter-direct.json  envmap-mis.json  envmap-naive-direct.json  envmap.json  instancing.json  median.json  mirage.json  normal-bvh.json  normal.json  path-2.json  path-mis.json  path.json  sah.json  tangent.json  uv-bvh.json  uv.json
src/: image.cpp  progress.cpp  render.cpp  scene.cpp  texture.cpp
src/integrators/: integrator.cpp
src/materials/: material.cpp
src/samplers/: sampler.cpp
src/shapes/: mesh.cpp  shape.cpp
